--- a/index.html
+++ b/index.html
@@ -112,120 +112,284 @@
         </div>
       </div>
 
-      <div class="row gy-4 text-center">
+      <div class="row gy-4 text-center justify-content-center">
 
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="ticket-outline"></ion-icon>
             </div>
             <h5 class="mt-4">Quais as formas de ingresso na graduação da UFT?</h5>
             <p></p>
-            <a href="./Páginas/formas_ingresso.html" class="custom-link">
+            <a href="#" class="custom-link" data-bs-toggle="modal" data-bs-target="#FormasDeIngresso">
               <span>Saiba mais</span>
               <i class="ri-arrow-right-line"></i>
             </a>
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="duplicate-outline"></ion-icon>
             </div>
             <h5 class="mt-4">Quais os cursos de graduação oferecidos pela UFT?</h5>
             <p></p>
-            <a href="./Páginas/cursos_graduação.html" class="custom-link">
+            <a href="#" class="custom-link" data-bs-toggle="modal" data-bs-target="#CursosDeGraduação">
               <span>Saiba mais</span>
               <i class="ri-arrow-right-line"></i>
             </a>
           </div>
         </div>
+        
 
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="alert-outline"></ion-icon>
             </div>
             <h5 class="mt-4">Quais são as modalidades de cotas na UFT?</h5>
             <p></p>
-            <a href="./Páginas/modalidade_cotas.html" class="custom-link">
+            <a href="#" class="custom-link" data-bs-toggle="modal" data-bs-target="#ModalidadeDeCotas">
               <span>Saiba mais</span>
               <i class="ri-arrow-right-line"></i>
             </a>
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="id-card-outline"></ion-icon>
             </div>
-            <h5 class="mt-4">Como funciona a matrícula na UFT?</h5>
+            <h5 class="mt-4">Como funciona a sua matrícula na UFT?</h5>
             <p></p>
-            <a href="./Páginas/funcionamento_matricula.html" class="custom-link">
+            <a href="#" class="custom-link" data-bs-toggle="modal" data-bs-target="#FuncionamentoDaMatricula">
               <span>Saiba mais</span>
               <i class="ri-arrow-right-line"></i>
             </a>
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="document-text-outline"></ion-icon>
             </div>
             <h5 class="mt-4">Quais os documentos obrigatórios de matrícula?</h5>
             <p></p>
-            <a href="./Páginas/documentos_matricula.html" class="custom-link">
+            <a href="#" class="custom-link" data-bs-toggle="modal" data-bs-target="#DocumentosMatricula">
               <span>Saiba mais</span>
               <i class="ri-arrow-right-line"></i>
             </a>
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="cash-outline"></ion-icon>
             </div>
-            <h5 class="mt-4">Quem precisa comprovar renda?</h5>
+            <h5 class="mt-4">Quem precisa comprovar renda na UFT?</h5>
             <p></p>
-            <a href="./Páginas/comprovar_renda.html" class="custom-link">
+            <a href="#" class="custom-link" data-bs-toggle="modal" data-bs-target="#ComprovarRenda">
               <span>Saiba mais</span>
               <i class="ri-arrow-right-line"></i>
             </a>
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="shield-checkmark-outline"></ion-icon>
             </div>
-            <h5 class="mt-4">Como fico sabendo quando será a minha sessão de verificação da autodeclaração
-              étnico-racial?</h5>
+            <h5 class="mt-4">Quando será a minha sessão de verificação da autodeclaração étnico-racial?</h5>
             <p></p>
-            <a href="./Páginas/verificação_autodeclaração.html" class="custom-link">
+            <a href="#" class="custom-link" data-bs-toggle="modal" data-bs-target="#VerificarAutodeclaração">
               <span>Saiba mais</span>
               <i class="ri-arrow-right-line"></i>
             </a>
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
           <div class="service py-5 px-4 border">
             <div class="service-icon">
               <ion-icon name="sad-outline"></ion-icon>
             </div>
             <h5 class="mt-4">Se o candidato for Não Homologado na Verificação Presencial, é possível recorrer?</h5>
             <p></p>
-            <a href="./Páginas/candidato_recorrer.html" class="custom-link">
+            <a href="#" class="custom-link" data-bs-toggle="modal" data-bs-target="#RecorrerVerificação">
               <span>Saiba mais</span>
               <i class="ri-arrow-right-line"></i>
             </a>
           </div>
         </div>
+
+
+
+        <!-- Modais -->
+
+        <!-- Modal Formas de Ingresso -->
+        <div class="modal fade" id="FormasDeIngresso" tabindex="-1" aria-labelledby="FormasDeIngressoLabel"
+          aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="FormasDeIngressoLabel">Quais as formas de ingresso na graduação da UFT?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+              </div>
+              <div class="modal-body">
+                <div class="modal-text">
+                  <!--Conteúdo-->
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <!-- Modal Cursos de Graduação -->
+        <div class="modal fade" id="CursosDeGraduação" tabindex="-1" aria-labelledby="CursosDeGraduaçãoLabel"
+          aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="CursosDeGraduaçãoLabel">Quais os cursos de graduação oferecidos pela UFT?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+              </div>
+              <div class="modal-body">
+                <!-- Conteúdo -->
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal Modalidade de cotas -->
+        <div class="modal fade" id="ModalidadeDeCotas" tabindex="-1" aria-labelledby="ModalidadeDeCotasLabel"
+          aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="ModalidadeDeCotasLabel">Quais as modalidades de cotas na UFT?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+              </div>
+              <div class="modal-body">
+                <!-- Conteúdo -->
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal Funcionamento matricula -->
+        <div class="modal fade" id="FuncionamentoDaMatricula" tabindex="-1" aria-labelledby="FuncionamentoDaMatriculaLabel"
+          aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="FuncionamentoDaMatriculaLabel">Como funciona a matrícula na UFT?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+              </div>
+              <div class="modal-body">
+                <!-- Conteúdo -->
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal Documentos matricula -->
+        <div class="modal fade" id="DocumentosMatricula" tabindex="-1" aria-labelledby="DocumentosMatriculaLabel"
+          aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="DocumentosMatriculaLabel">Quais os documentos obrigatórios de matrícula?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+              </div>
+              <div class="modal-body">
+                <!-- Conteúdo -->
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal Comprovar renda -->
+        <div class="modal fade" id="ComprovarRenda" tabindex="-1" aria-labelledby="ComprovarRendaLabel"
+          aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="ComprovarRendaLabel">Quem precisa comprovar renda?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+              </div>
+              <div class="modal-body">
+                <!-- Conteúdo -->
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal Verificar autodeclaração -->
+        <div class="modal fade" id="VerificarAutodeclaração" tabindex="-1" aria-labelledby="VerificarAutodeclaraçãoLabel"
+          aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="VerificarAutodeclaraçãoLabel">Como fico sabendo quando será a minha sessão de verificação da autodeclaração étnico-racial?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+              </div>
+              <div class="modal-body">
+                <!-- Conteúdo -->
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal Verificação -->
+        <div class="modal fade" id="RecorrerVerificação" tabindex="-1" aria-labelledby="RecorrerVerificaçãoLabel"
+          aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="RecorrerVerificaçãoLabel">Se o candidato for Não Homologado na Verificação Presencial, é possível recorrer?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+              </div>
+              <div class="modal-body">
+                <!-- Conteúdo -->
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+
+
 
       </div>
     </div>
