--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <!-- Outros -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
 
   <!-- Conexão ao CSS da página -->
   <link rel="stylesheet" href="./css/style.css">
@@ -1883,49 +1884,27 @@
   </section>
 
 
-  <footer class="footer">
+  <footer class="mt-5 py-5">
     <div class="container">
-      <div class="row">
-        <div class="footer-col">
-          <h4>company</h4>
-          <ul>
-            <li><a href="#">about us</a></li>
-            <li><a href="#">our services</a></li>
-            <li><a href="#">privacy policy</a></li>
-            <li><a href="#">affiliate program</a></li>
-          </ul>
-        </div>
-        <div class="footer-col">
-          <h4>get help</h4>
-          <ul>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">shipping</a></li>
-            <li><a href="#">returns</a></li>
-            <li><a href="#">order status</a></li>
-            <li><a href="#">payment options</a></li>
-          </ul>
-        </div>
-        <div class="footer-col">
-          <h4>online shop</h4>
-          <ul>
-            <li><a href="#">watch</a></li>
-            <li><a href="#">bag</a></li>
-            <li><a href="#">shoes</a></li>
-            <li><a href="#">dress</a></li>
-          </ul>
-        </div>
-        <div class="footer-col">
-          <h4>follow us</h4>
-          <div class="social-links">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-          </div>
-        </div>
+      <div class="footer-logo text-center">
+        <img src="#" class="img-fluid"></img>
+      </div>
+      <div class="footer-social d-flex justify-content-center gap-3 text-center mt-3">
+        <a href="https://www.github.com/" class="text-white"><i class="bi bi-github"></i></a>
+        <a href="https://www.instagram.com/" class="text-white"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/" class="text-white"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.youtube.com/" class="text-white"><i class="bi bi-youtube"></i></a>
+      </div>
+      <div class="footer-copyright text-center mt-3 mt-lg-2">
+        <p>Copyright 2023 Mert | Feito por Vinícius Raniery</p>
       </div>
     </div>
- </footer>
+  </footer>
+
+
+  <div class="scroll-up-btn">
+    <ion-icon name="arrow-up-circle-outline"></ion-icon>
+  </div>
 
 
   <!-- Link do bootstrap da página -->
@@ -1933,6 +1912,7 @@
 
   <!-- Outros -->
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 
   <!-- Link dos Icons -->
   <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
