Ajuste do footer

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </a>
           </div>
         </div>
-        
+
 
         <div class="col-lg-4 col-sm-6">
           <div class="service py-5 px-4 border">
@@ -260,7 +260,8 @@
           <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="CursosDeGraduaçãoLabel">Quais os cursos de graduação oferecidos pela UFT?</h5>
+                <h5 class="modal-title" id="CursosDeGraduaçãoLabel">Quais os cursos de graduação oferecidos pela UFT?
+                </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
               </div>
               <div class="modal-body">
@@ -293,8 +294,8 @@
         </div>
 
         <!-- Modal Funcionamento matricula -->
-        <div class="modal fade" id="FuncionamentoDaMatricula" tabindex="-1" aria-labelledby="FuncionamentoDaMatriculaLabel"
-          aria-hidden="true">
+        <div class="modal fade" id="FuncionamentoDaMatricula" tabindex="-1"
+          aria-labelledby="FuncionamentoDaMatriculaLabel" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
@@ -317,7 +318,8 @@
           <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="DocumentosMatriculaLabel">Quais os documentos obrigatórios de matrícula?</h5>
+                <h5 class="modal-title" id="DocumentosMatriculaLabel">Quais os documentos obrigatórios de matrícula?
+                </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
               </div>
               <div class="modal-body">
@@ -350,12 +352,13 @@
         </div>
 
         <!-- Modal Verificar autodeclaração -->
-        <div class="modal fade" id="VerificarAutodeclaração" tabindex="-1" aria-labelledby="VerificarAutodeclaraçãoLabel"
-          aria-hidden="true">
+        <div class="modal fade" id="VerificarAutodeclaração" tabindex="-1"
+          aria-labelledby="VerificarAutodeclaraçãoLabel" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="VerificarAutodeclaraçãoLabel">Como fico sabendo quando será a minha sessão de verificação da autodeclaração étnico-racial?</h5>
+                <h5 class="modal-title" id="VerificarAutodeclaraçãoLabel">Como fico sabendo quando será a minha sessão
+                  de verificação da autodeclaração étnico-racial?</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
               </div>
               <div class="modal-body">
@@ -374,7 +377,8 @@
           <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="RecorrerVerificaçãoLabel">Se o candidato for Não Homologado na Verificação Presencial, é possível recorrer?</h5>
+                <h5 class="modal-title" id="RecorrerVerificaçãoLabel">Se o candidato for Não Homologado na Verificação
+                  Presencial, é possível recorrer?</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
               </div>
               <div class="modal-body">
@@ -1886,20 +1890,21 @@
 
   <footer class="mt-5 py-5">
     <div class="container">
-      <div class="footer-logo text-center">
-        <img src="#" class="img-fluid"></img>
+      <div class="row justify-content-center">
+        <div class="col-md-4 text-center">
+          <div class="footer-logo">
+            <img src="./img/Logo-UFT.png" class="img-fluid" style="max-width: 100px; height: auto;">
+          </div>
+        </div>
       </div>
-      <div class="footer-social d-flex justify-content-center gap-3 text-center mt-3">
-        <a href="https://www.github.com/" class="text-white"><i class="bi bi-github"></i></a>
-        <a href="https://www.instagram.com/" class="text-white"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/" class="text-white"><i class="bi bi-linkedin"></i></a>
-        <a href="https://www.youtube.com/" class="text-white"><i class="bi bi-youtube"></i></a>
-      </div>
-      <div class="footer-copyright text-center mt-3 mt-lg-2">
-        <p>Copyright 2023 Mert | Feito por Vinícius Raniery</p>
+      <div class="row justify-content-center mt-3">
+        <div class="col-md-4 text-center">
+          <p class="mb-0">Copyright 2023 Mert | Feito por Vinícius Raniery</p>
+        </div>
       </div>
     </div>
   </footer>
+  
 
 
   <div class="scroll-up-btn">
