--- a/Páginas/simulador_cotas.html
+++ b/Páginas/simulador_cotas.html
@@ -33,7 +33,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Principais Perguntas">Principais perguntas</a>
+                            <a class="nav-link" href="../index.html#Principais Perguntas">Principais perguntas</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -44,19 +44,26 @@
                                 <li><a class="dropdown-item" href="../index.html#Ingresso">Ingresso</a></li>
                                 <li><a class="dropdown-item" href="../index.html#Vestibular">Vestibular</a></li>
                                 <li><a class="dropdown-item" href="../index.html#SiSu">SiSu</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Processo seletivo">Processo seletivo</a></li>
+                                <li><a class="dropdown-item" href="../index.html#Processo seletivo">Processo
+                                        seletivo</a></li>
                                 <li><a class="dropdown-item" href="../index.html#Cotas">Cotas</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Pretos, Pardos e indígenas">Preto, Pardo,
+                                <li><a class="dropdown-item" href="../index.html#Pretos, Pardos e indígenas">Preto,
+                                        Pardo,
                                         indígena</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Resultado e chamamentos">Resultados/chamamentos</a>
+                                <li><a class="dropdown-item"
+                                        href="../index.html#Resultado e chamamentos">Resultados/chamamentos</a>
                                 </li>
-                                <li><a class="dropdown-item" href="../index.html#Matrícula e documentação">Matrícula/Documentação</a>
+                                <li><a class="dropdown-item"
+                                        href="../index.html#Matrícula e documentação">Matrícula/Documentação</a>
                                 </li>
-                                <li><a class="dropdown-item" href="../index.html#Comprovação de renda">Comprovação de renda</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Pessoas com deficiência">Pessoa com deficiência</a>
+                                <li><a class="dropdown-item" href="../index.html#Comprovação de renda">Comprovação de
+                                        renda</a></li>
+                                <li><a class="dropdown-item" href="../index.html#Pessoas com deficiência">Pessoa com
+                                        deficiência</a>
                                 </li>
                                 <li><a class="dropdown-item" href="#Calouro">Calouro</a></li>
-                                <li><a class="dropdown-item" href="../index.html#Confirmação de interesse">Confirmação interesse</a>
+                                <li><a class="dropdown-item" href="../index.html#Confirmação de interesse">Confirmação
+                                        interesse</a>
                                 </li>
                                 <li><a class="dropdown-item" href="#">Convocação autodeclaração</a></li>
                             </ul>
@@ -76,19 +83,20 @@
 
 
     <!-- Home -->
-  <section id="home" class="d-flex align-items-center min-vh-100">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h1 class="display-2 fw-bold" data-aos="fade-up">Bem vindo ao nosso <span
-              class="text-brand">Simulador de Cotas</span></h1>
-          <h4 data-aos="fade-up" data-aos-delay="100" class="mt-3 mb-5">Uma pesquisa mais rápida!</h4>
-          <div data-aos="fade-up" data-aos-delay="200"><a href="#Simulador" class="btn btn-brand">Teste já!</a>
-          </div>
+    <section id="home" class="d-flex align-items-center min-vh-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1 class="display-2 fw-bold" data-aos="fade-up">Bem vindo ao nosso <span
+                            class="text-brand">Simulador de Cotas</span></h1>
+                    <h4 data-aos="fade-up" data-aos-delay="100" class="mt-3 mb-5">Uma pesquisa mais rápida!</h4>
+                    <div data-aos="fade-up" data-aos-delay="200"><a href="#Simulador" class="btn btn-brand">Teste
+                            já!</a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
 
 
@@ -98,80 +106,93 @@
                 <div class="col-12">
                     <div class="setion-title text-center">
                         <h1>Simulador</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut
-                            deserunt magnam
-                            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita
-                            quibusdam
-                            consectetur? Nemo!</p>
+                        <p>Utilize nosso Simulador de Cotas e descubra as oportunidades que estão disponíveis para você!
+                            Estamos aqui para ajudá-lo(a) a entender melhor as cotas e tornar seu processo de
+                            candidatura mais claro e transparente. Desejamos sucesso em sua jornada e que você possa
+                            aproveitar todas as oportunidades que estiverem ao seu alcance.</p>
                         <div class="line"></div>
                     </div>
                 </div>
             </div>
-            <div class="form-group">
-                <label>Estudou em escola pública todos os três anos do Ensino Médio?</label><br>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="escola" id="escola-sim" value="sim">
-                    <label class="form-check-label" for="escola-sim">Sim</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="escola" id="escola-nao" value="nao">
-                    <label class="form-check-label" for="escola-nao">Não</label>
-                </div>
+            <div class="container mt-5">
+                <h1>Simulador de Modalidades de Cotas</h1>
+                <form id="simulatorForm">
+                    <div class="form-group">
+                        <label for="question1">Estudou em escola pública todos os três anos do Ensino Médio?</label>
+                        <select class="form-control" id="question1">
+                            <option value="">Selecione</option>
+                            <option value="Sim">Sim</option>
+                            <option value="Não">Não</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="question2">Renda per capita menor ou igual a 1,5 salário mínimo?</label>
+                        <select class="form-control" id="question2">
+                            <option value="">Selecione</option>
+                            <option value="Sim">Sim</option>
+                            <option value="Não">Não</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="question3">Você é autodeclarado preto, pardo ou indígena?</label>
+                        <select class="form-control" id="question3">
+                            <option value="">Selecione</option>
+                            <option value="Sim">Sim</option>
+                            <option value="Não">Não</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="question4">Você é pessoa com deficiência?</label>
+                        <select class="form-control" id="question4">
+                            <option value="">Selecione</option>
+                            <option value="Sim">Sim</option>
+                            <option value="Não">Não</option>
+                        </select>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Verificar Modalidades</button>
+                </form>
+                <div id="result" class="mt-4"></div>
             </div>
-
-            <div class="form-group">
-                <label>Renda per capita menor ou igual a 1,5 salário mínimo?</label><br>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="renda" id="renda-sim" value="sim">
-                    <label class="form-check-label" for="renda-sim">Sim</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="renda" id="renda-nao" value="nao">
-                    <label class="form-check-label" for="renda-nao">Não</label>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label>Você é autodeclarado preto, pardo ou indígena?</label><br>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="etnia" id="etnia-sim" value="sim">
-                    <label class="form-check-label" for="etnia-sim">Sim</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="etnia" id="etnia-nao" value="nao">
-                    <label class="form-check-label" for="etnia-nao">Não</label>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label>Você é pessoa com deficiência?</label><br>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="deficiencia" id="deficiencia-sim" value="sim">
-                    <label class="form-check-label" for="deficiencia-sim">Sim</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="deficiencia" id="deficiencia-nao" value="nao">
-                    <label class="form-check-label" for="deficiencia-nao">Não</label>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary">Verificar Modalidade de Cotas</button>
-            </div>
-            </form>
-
-            <div id="resultado" class="mt-4"></div>
-        </div>
-        </div>
     </section>
 
 
 
+    <footer class="mt-5 py-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-4 text-center">
+                    <div class="footer-logo">
+                        <img src="../img/Logo-UFT.png" class="img-fluid" style="max-width: 100px; height: auto;">
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center mt-3">
+                <div class="col-md-4 text-center">
+                    <p class="mb-0">Copyright 2023 Mert | Feito por Vinícius Raniery</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
+
+
+    <div class="scroll-up-btn">
+        <ion-icon name="arrow-up-circle-outline"></ion-icon>
+    </div>
+
+
+
+    <!-- Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Outros-->
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+
+    <!-- Icons e outros-->
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+    <!--JS do código-->
     <script src="../js/main.js"></script>
     <script src="../js/simulador.js"></script>
 </body>
