--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ingresso na UFT</title>
+  <title>Ingresso na Graduação - UFT</title>
   <!-- Logo da página -->
   <link rel="icon" type="image/x-icon" href="./img/Logo-UFT.png">
 
@@ -18,7 +18,6 @@
   <!-- Outros -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
 
   <!-- Conexão ao CSS da página -->
   <link rel="stylesheet" href="./css/style.css">
@@ -1917,7 +1916,6 @@
 
   <!-- Outros -->
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 
   <!-- Link dos Icons -->
   <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
