--- a/Páginas/simulador_cotas.html
+++ b/Páginas/simulador_cotas.html
@@ -81,7 +81,6 @@
     </nav>
 
 
-
     <!-- Home -->
     <section id="home" class="d-flex align-items-center min-vh-100">
         <div class="container">
@@ -124,6 +123,10 @@
                             <option value="Sim">Sim</option>
                             <option value="Não">Não</option>
                         </select>
+                        <small>*Para concorrer a esta ação afirmativa é necessário que todo o Ensino Médio tenha sido
+                            feito em Escola Pública. Candidato que tenha cursado uma disciplina isolada em escola
+                            privada ou que tenha sido bolsista, mesmo que integral, de escola privada não pode marcar
+                            esta opção. Saiba mais na pergunta específica aqui no Portal!</small>
                     </div>
                     <div class="form-group">
                         <label for="question2">Renda per capita menor ou igual a 1,5 salário mínimo?</label>
@@ -132,6 +135,8 @@
                             <option value="Sim">Sim</option>
                             <option value="Não">Não</option>
                         </select>
+                        <small>*O cálculo deve ser da renda bruta somada de todos os membros do grupo familiar. Saiba o
+                            valor exato na pergunta específica no Portal!</small>
                     </div>
                     <div class="form-group">
                         <label for="question3">Você é autodeclarado preto, pardo ou indígena?</label>
@@ -140,6 +145,8 @@
                             <option value="Sim">Sim</option>
                             <option value="Não">Não</option>
                         </select>
+                        <small>*Informe-se sobre a autodeclaração étnico-racial na pergunta aqui no site e veja como é
+                            feita a verificação dessa condição: neste item.</small>
                     </div>
                     <div class="form-group">
                         <label for="question4">Você é pessoa com deficiência?</label>
@@ -148,13 +155,15 @@
                             <option value="Sim">Sim</option>
                             <option value="Não">Não</option>
                         </select>
+                        <small>*Veja quem pode concorrer às vagas destinadas às pessoas com deficiência: neste
+                            link.</small>
                     </div>
                     <button type="submit" class="btn btn-primary">Verificar Modalidades</button>
                 </form>
-                <div id="result" class="mt-4"></div>
+                <div id="result" class="mt-4" style="padding: 10px;"></div>
             </div>
+        </div>
     </section>
-
 
 
     <footer class="mt-5 py-5">
