--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
   <nav id="navbar" class="navbar navbar-expand-lg fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">Ingresso na graduação - UFT</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
-        aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvaslightNavbar"
+        aria-controls="offcanvaslightNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-        aria-labelledby="offcanvasDarkNavbarLabel">
+      <div class="offcanvas offcanvas-end text-bg-light" tabindex="-1" id="offcanvaslightNavbar"
+        aria-labelledby="offcanvaslightNavbarLabel">
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
@@ -48,7 +48,7 @@
                 aria-expanded="false">
                 Principais Tópicos
               </a>
-              <ul class="dropdown-menu dropdown-menu-dark">
+              <ul class="dropdown-menu dropdown-menu-light">
                 <li><a class="dropdown-item" href="#Ingresso">Ingresso</a></li>
                 <li><a class="dropdown-item" href="#Vestibular">Vestibular</a></li>
                 <li><a class="dropdown-item" href="#SiSu">SiSu</a></li>
