--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       </button>
       <div class="offcanvas offcanvas-end text-bg-light" tabindex="-1" id="offcanvaslightNavbar"
         aria-labelledby="offcanvaslightNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvaslightNavbarLabel">Menu</h5>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
