--- a/Páginas/simulador_cotas.html
+++ b/Páginas/simulador_cotas.html
@@ -33,7 +33,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html#Principais Perguntas">Principais perguntas</a>
+                            <a class="nav-link" href="#Modalidades">Sobre as Modalidades</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -262,6 +262,90 @@
             </div>
         </div>
     </section>
+
+
+
+    <!-- Tudo sobre as modalidades -->
+    <section id="Modalidades" class="section-padding section-connector">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="setion-title text-center">
+                        <h1>Sobre as modalidades</h1>
+                        <p>Abaixo temos uma breve explicação sobre cada modalidade do nosso Simulador de Cotas.</p>
+                        <div class="line"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row gy-5">
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="eduexp p-5 pt-0">
+                                <h5>A0 - Acesso universal / Ampla concorrência</h5>
+                                <small class="text-brand">O que é o GitHub</small>
+                                <p class="mb-0">...</p>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="eduexp p-5 pt-0">
+                                <h5>L1 - Escola pública e renda inferior</h5>
+                                <small class="text-brand">Criação do seu primeiro repositório</small>
+                                <p class="mb-0">...</p>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="eduexp p-5 pt-0 pb-0">
+                                <h5>L2 - Escola pública, renda inferior e autodeclarado preto, pardo ou indígena</h5>
+                                <small class="text-brand">Trabalhando com as Branches</small>
+                                <p class="mb-0">...</p>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="eduexp p-5 pt-0">
+                                <h5>L3/L5 - Escola pública e renda não considerada</h5>
+                                <small class="text-brand">Trabalhando com as commits</small>
+                                <p class="mb-0">...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="eduexp p-5 pt-0">
+                                <h5>L4/L6 - Escola pública, renda não considerada e preto, pardo ou indígena</h5>
+                                <small class="text-brand">Trabalhando com os pull requests</small>
+                                <p class="mb-0">...</p>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="eduexp p-5 pt-0 pb-0">
+                                <h5>L9 - Escola pública, renda inferior e pessoa com deficiência</h5>
+                                <small class="text-brand">Etapa final</small>
+                                <p class="mb-0">...</p>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="eduexp p-5 pt-0 pb-0">
+                                <h5>L13 - Escola pública e pessoa com deficiência</h5>
+                                <small class="text-brand">Etapa final</small>
+                                <p class="mb-0">...</p>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="eduexp p-5 pt-0 pb-0">
+                                <h5>L14 - Escola pública, renda não considerada, preto, pardo ou indígena e pessoa com deficiência</h5>
+                                <small class="text-brand">Etapa final</small>
+                                <p class="mb-0">...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
     <footer class="mt-5 py-5">
